fixed scrollbar being added

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,10 +28,11 @@ header {
     position: relative;
     top: 0;
     background-color: #006464;
-    width: 100%;
+    width: 100vw;
     height: 100px;
     margin-bottom: 15px;
-    padding: 15px 0 0 25px;
+    padding-top: 15px;
+    border-bottom: 2px solid #ff841f;
 }
 
 .error {
@@ -41,6 +42,7 @@ header {
 .title {
     text-shadow: 4px 4px 2px rgb(0, 0, 0);
     font-weight: bold;
+    padding-left: 25px;
 }
 
 main {
@@ -67,7 +69,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 50px;
+    padding-top: 25px;
     background-color: #006464;
-    padding: 25px 0 0 15px;
     text-shadow: 2px 2px 1px rgb(0, 0, 0);
 }
